Shang New Live/src/objects/Rent_Schedules__c.object
<CustomObject>
    <fields>
        <fullName>Gross_Rent_Cap_By_Lease__c</fullName>
        <formula>if(Gross_Rent_By_Lease__c &lt;= (Cap_Amount_By_Lease__c) || Cap_Amount_By_Lease__c &lt;= 0 , Gross_Rent_By_Lease__c , Cap_Amount_By_Lease__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Rent after comparison with Cap Amount 
Show Lower Value (Between Gross Rent &amp; Cap Amount. 
IF Cap Amount is 0, then we show Gross Rent as it is</inlineHelpText>
        <label>Gross Rent (Cap) (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Rent_Cap__c</fullName>
        <formula>if(Gross_Rent__c &lt;= (Cap_Value__c*Calc_No_of_Days_Pro_Rated_2__c* Area_ft__c) || Cap_Value__c* Area_ft__c &lt;= 0 ,Gross_Rent__c , Cap_Value__c*Calc_No_of_Days_Pro_Rated_2__c* Area_ft__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Rent after comparison with Cap Amount
Show Lower Value (Between Gross Rent &amp; Cap Amount.
IF Cap Amount is 0, then we show Gross Rent as it is</inlineHelpText>
        <label>Gross Rent (Cap)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Rent__c</fullName>
        <formula>If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO (Sum)&quot;), 
	GTO_Amount1__c + Base_Rent_LC__r.Base_Rent_Calculation__c*Calc_No_of_Days_Pro_Rated_2__c, 
If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO (Higher)&quot;), 
	If(GTO_Amount1__c &gt; Base_Rent_LC__r.Base_Rent_Calculation__c*Calc_No_of_Days_Pro_Rated_2__c , GTO_Amount1__c , Base_Rent_LC__r.Base_Rent_Calculation__c*Calc_No_of_Days_Pro_Rated_2__c),
     If(ISPICKVAL(Lease_Charge__r.Type__c,&quot;GTO&quot;), GTO_Amount1__c,0))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF GTO (Sum): GTO + Base Rent
IF GTO (Higher): Pickup Greater Value (between Base Rent &amp; GTO Amount)</inlineHelpText>
        <label>Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <label>Horse Power</label>
        <summarizedField>Electric_Transaction__c.Horse_Power__c</summarizedField>
        <summaryForeignKey>Electric_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>Invoice_Line_Item__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Invoice_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leap_Year__c</fullName>
        <formula>IF(OR(MOD(Year__c,400)=0,AND(MOD(Year__c,4)=0,MOD(Year__c,100)&lt;&gt;0)),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leap Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Agreement_No__c</fullName>
        <formula>Lease_Unit__r.Lease_Agreement_No__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Lease Unit</inlineHelpText>
        <label>Lease Agreement No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Charge_Id__c</fullName>
        <formula>Lease_Charge__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Charge Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Charge</label>
        <referenceTo>Lease_Charges__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Unit_Property__c</fullName>
        <formula>Lease_Unit__r.Property__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Lease Unit &gt; Property</inlineHelpText>
        <label>Lease Unit Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Unit__r.Level__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <label>Maintenance Fee</label>
        <summarizedField>Electric_Transaction__c.Maintenance_Fee__c</summarizedField>
        <summaryForeignKey>Electric_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NLA_SQF_By_Lease__c</fullName>
        <label>NLA (SQF) (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupied_Area__c</fullName>
        <description>Created to be managed in Reports (Room Availability Report)</description>
        <formula>IF ( Tenancy_Status__c = 1, Unit__r.NLA_SQF__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupied Area (Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Transaction_Count__c</fullName>
        <description>This field is referred in Trigger code POSFieldPolulateTrigger</description>
        <inlineHelpText>This field is referred in Trigger code POSFieldPolulateTrigger</inlineHelpText>
        <label>POS Transaction Count</label>
        <summaryForeignKey>POS_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Rent_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rent Schedule</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Rent Schedules (Child)</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_transaction_Count__c</fullName>
        <description>This field is referred in Trigger code Phone_Trax_linkWithRentSchedules</description>
        <inlineHelpText>This field is referred in Trigger code Phone_Trax_linkWithRentSchedules</inlineHelpText>
        <label>Phone transaction Count</label>
        <summaryForeignKey>Phone_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PropertyLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Unit__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Unit</inlineHelpText>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Unit__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from related Unit</inlineHelpText>
        <label>Unit Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRD_Text__c</fullName>
        <description>Rent Roll Detail Id is stored in this field when voided</description>
        <inlineHelpText>Rent Roll Detail Id is stored in this field when voided</inlineHelpText>
        <label>RRD Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Text__c</fullName>
        <description>Rent Roll Id is stored in this field when voided</description>
        <inlineHelpText>Rent Roll Id is stored in this field when voided</inlineHelpText>
        <label>RR Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Roll_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Roll Detail</label>
        <referenceTo>Rent_Roll_Detail__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Roll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Roll</label>
        <referenceTo>Rent_Roll__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Schedules_Month_Year__c</fullName>
        <formula>TEXT(MONTH(Start_Date__c)) + &quot;-&quot; + TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Schedules Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vacancy</fullName>
                </value>
                <value>
                    <fullName>In-Tenancy</fullName>
                </value>
                <value>
                    <fullName>Rent Roll Generated</fullName>
                </value>
                <value>
                    <fullName>Payment Received</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rent Free</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEst__c</fullName>
        <formula>IF(
    (
    CONTAINS( UPPER( Lease_Charge__r.Name ) , &quot;ADVANCE&quot;) 
    &amp;&amp; 
    NOT ISPICKVAL(Lease_Charge__r.Billing_Frequency__c, &quot;Monthly&quot;) 
    ) || 
    CONTAINS( TEXT ( Lease_Charge__r.Multiple_of_Parameter__c ), &quot;Unit&quot;) 
      || 
    CONTAINS( UPPER( Lease_Charge__r.Name ) , &quot;GTO&quot;) , 
 1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Rental__c</fullName>
        <formula>Unit__r.Target_Rental__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Calculated_Amount__c</fullName>
        <label>Temp Calculated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Cumulative_Cur__c</fullName>
        <formula>( Lease_Charge__r.Charge__r.Tier_3_Rate__c * ( Total_Units_p__c- Lease_Charge__r.Charge__r.Tier_2_Upper_Limit__c ) ) + 
( Lease_Charge__r.Charge__r.Tier_2_Rate__c * ( Lease_Charge__r.Charge__r.Tier_2_Upper_Limit__c - Lease_Charge__r.Charge__r.Tier_1_Upper_Limit__c ) ) + 
( Lease_Charge__r.Charge__r.Tier_1_Rate__c * ( Lease_Charge__r.Charge__r.Tier_1_Upper_Limit__c - Lease_Charge__r.Charge__r.Tiered_Lower_Limit__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp_Cumulative_Cur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenancy_Status__c</fullName>
        <formula>CASE( Status__c , &apos;Vacancy&apos;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenancy Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenantLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>Lease_Unit__r.Tenant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminated_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminated Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier2_Upper_Limit__c</fullName>
        <formula>Lease_Charge__r.Charge__r.Tier_2_Upper_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier2_Upper_Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <formula>Lease_Charge__r.Charge__r.Tier_2_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tiered__c</fullName>
        <formula>Lease_Charge__r.Tiered_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controlled by related LC</inlineHelpText>
        <label>Tiered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Foreign__c</fullName>
        <formula>Amount_Foreign__c + Comm_Tax_Amount_Foreign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Local__c</fullName>
        <formula>Amount_Local__c +  Comm_Tax_Amount_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>AmountRounding__c  +  Comm_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Electric_Units__c</fullName>
        <label>Total Electric Units</label>
        <summarizedField>Electric_Transaction__c.Total_Units__c</summarizedField>
        <summaryForeignKey>Electric_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_GTO_Converted__c</fullName>
        <formula>if(AND(Exchange_Rate__c &gt; 0, Total_Estimated_GTO__c  &gt; 0) , Total_Estimated_GTO__c  /  Exchange_Rate__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated GTO (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_GTO__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total estimated GTO sales</inlineHelpText>
        <label>Total Estimated GTO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GTO_Rent_By_Lease__c</fullName>
        <label>Total GTO Rent (By Lease)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gas_Units__c</fullName>
        <label>Total Gas Units</label>
        <summarizedField>Gas_Transaction__c.Total_Unit__c</summarizedField>
        <summaryForeignKey>Gas_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Phone_Units__c</fullName>
        <label>Total Phone Units</label>
        <summarizedField>Phone_Transaction__c.Total_Unit__c</summarizedField>
        <summaryForeignKey>Phone_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <formula>IF ( Total_Water_Units__c &gt; 0 &amp;&amp; ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Water&quot;),Total_Water_Units__c,
IF ( Total_Gas_Units__c &gt; 0 &amp;&amp; ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Gas&quot;)  , Total_Gas_Units__c ,
IF ( Total_Electric_Units__c &gt; 0 &amp;&amp; ( ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Gov Meter&quot;) || ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Sub Meter&quot;)),Total_Electric_Units__c  ,
IF ( Total_Electric_Units__c &gt; 0 &amp;&amp;  ISPICKVAL(Lease_Charge__r.Charge__r.Charge_Type__c, &quot;Generator&quot;) &amp;&amp;
ISPICKVAL(Lease_Charge__r.Charge__r.Type__c, &quot;Meter Units&quot;)      ,Total_Electric_Units__c  ,
IF ( Total_Phone_Units__c &gt; 0 &amp;&amp; (ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Local&quot;) || ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;Trunk&quot;))  ,Total_Phone_Units__c,
IF ( GTO_Monthly_Total_Converted__c &gt; 0 &amp;&amp; ISPICKVAL(Lease_Charge__r.Charge_Type__c, &quot;GTO Rent&quot;)  &amp;&amp;  Tiered__c,  
GTO_Monthly_Total_Converted__c ,
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Units_p__c</fullName>
        <label>Total Units Physical</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Water_Units__c</fullName>
        <label>Total Water Units</label>
        <summarizedField>Water_Transaction__c.Total_Unit__c</summarizedField>
        <summaryForeignKey>Water_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trading_Day_s__c</fullName>
        <label>Trading Day(s)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_End_Date__c</fullName>
        <label>Transaction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Start_Date__c</fullName>
        <label>Transaction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Applicable - Not Imported</fullName>
                </value>
                <value>
                    <fullName>Applicable - Imported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Unit__c</fullName>
        <formula>Total_Electric_Units__c  +  Total_Gas_Units__c + Total_Phone_Units__c  +  Total_Water_Units__c + GTO_Monthly_Total_Converted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Created for report use. to be hidden from layout</description>
        <formula>TEXT ( Lease_Charge__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <formula>Unit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Units__c.Property__c</field>
                <operation>equals</operation>
                <valueField>$Source.PropertyLU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Rent Schedules</relationshipLabel>
        <relationshipName>Rent_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Water_Transaction_Count__c</fullName>
        <description>This field is referred in Trigger code Water_Trax_linkWithRentSchedules</description>
        <inlineHelpText>This field is referred in Trigger code Water_Trax_linkWithRentSchedules</inlineHelpText>
        <label>Water Transaction Count</label>
        <summaryForeignKey>Water_Transaction__c.Rent_Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Rate__c</fullName>
        <formula>Lease_Charge__r.Withholding_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withholding Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>check__c</fullName>
        <formula>( End_Date__c -  Start_Date__c ) &lt; 28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>days__c</fullName>
        <formula>(End_Date__c -  Start_Date__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>first_RentalSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>first RentalSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_RentalSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>last RentalSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Converted_Base_Rent__c</fullName>
        <label>% of Converted Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rent_roll_casesafe__c</fullName>
        <formula>CASESAFEID( Rent_Roll__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rent roll casesafe</label>
        <type>Text</type>
    </fields>
    <label>Rent Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Unit__c</columns>
        <columns>Amount__c</columns>
        <columns>AmountRounding__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Tenancy_Status__c</columns>
        <columns>Lease_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllJMT</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Property__c</columns>
        <columns>Unit__c</columns>
        <columns>Tenant__c</columns>
        <columns>Amount__c</columns>
        <columns>AmountRounding__c</columns>
        <columns>Billing_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tenant__c</field>
            <operation>equals</operation>
            <value>Swensen&apos;s</value>
        </filters>
        <filters>
            <field>Unit__c</field>
            <operation>equals</operation>
            <value>105/A</value>
        </filters>
        <filters>
            <field>Charge_Type__c</field>
            <operation>equals</operation>
            <value>GTO Rent</value>
        </filters>
        <label>All JMT</label>
    </listViews>
    <listViews>
        <fullName>AllJunctionCity</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Amount__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Trading_Day_s__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction City</value>
        </filters>
        <label>All Junction City</label>
    </listViews>
    <listViews>
        <fullName>AllMyatMyatTest</fullName>
        <columns>Property__c</columns>
        <columns>Unit__c</columns>
        <columns>Tenant__c</columns>
        <columns>NAME</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Amount__c</columns>
        <columns>AmountRounding__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Trading_Day_s__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_Unit__c</field>
            <operation>equals</operation>
            <value>2016-09-LU-00003014</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rent_Schedules__c.Monthly</value>
        </filters>
        <label>All Myat Myat Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllNewtonMall</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Amount__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Trading_Day_s__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Tenancy_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Newton Mall</value>
        </filters>
        <filters>
            <field>Lease_Charge__c</field>
            <operation>contains</operation>
            <value>rental</value>
        </filters>
        <label>All Newton Mall</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllTrainingMall</fullName>
        <columns>Property__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Unit__c</columns>
        <columns>Tenant__c</columns>
        <columns>NAME</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Amount__c</columns>
        <columns>AmountRounding__c</columns>
        <columns>Status__c</columns>
        <columns>Trading_Day_s__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Training Mall</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rent_Schedules__c.Monthly</value>
        </filters>
        <label>All Training Mall</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Junction_Maw_Tin_base_rent</fullName>
        <columns>Approved__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Property__c</columns>
        <columns>Unit__c</columns>
        <columns>Tenant__c</columns>
        <columns>NAME</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Trading_Day_s__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rent_Schedules__c.Rent</value>
        </filters>
        <label>All Junction Maw Tin base rent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Myat_Test</fullName>
        <columns>NAME</columns>
        <columns>Rent_Roll__c</columns>
        <columns>Approved__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Start_Date__c</columns>
        <columns>Property__c</columns>
        <columns>Unit__c</columns>
        <columns>Tenant__c</columns>
        <columns>Amount__c</columns>
        <columns>Lease_Charge__c</columns>
        <columns>Trading_Day_s__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>MT</value>
        </filters>
        <filters>
            <field>Billing_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rent_Schedules__c.Rent</value>
        </filters>
        <filters>
            <field>Charge_Type__c</field>
            <operation>contains</operation>
            <value>Advance</value>
        </filters>
        <label>All Myat Test</label>
        <language>en_US</language>
    </listViews>
</CustomObject>